--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Playable Piano JavaScript</title>
+    <link rel="icon" type="image/x-icon" href="./assets/img/piano-icon-256x256-ej6jzz57.png">
     <link rel="stylesheet" href="./assets/CSS/main.css">
     <link rel="stylesheet" href="./assets/CSS/responsive.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
